src/postgres/third-party-extensions/pg_duckdb/test/regression/expected/issue_749.out
create temp table users (data jsonb);
insert into users values ('{"a": 123}');
create or replace function get_users() returns setof users as
$$ SELECT * FROM users; $$
language sql stable;
SET duckdb.force_execution = true;
-- This command used to crash due to DuckDB returning data in the json
-- format instead of in jsonb format.
SELECT * FROM ROWS FROM(get_users()) WITH ORDINALITY;
WARNING:  (PGDuckDB/CreatePlan) Prepared query returned an error: Catalog Error: Table Function with name get_users does not exist!
Did you mean "generate_series"?

LINE 1: SELECT data, ordinality FROM get_users() WITH ORDINALITY get_users(data, ordinality)
                                     ^
    data    | ordinality 
------------+------------
 {"a": 123} |          1
(1 row)

